# django_rest_framework

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
api/migrations/: 0001_initial.py  0002_category_remove_product_name_product_title_and_more.py
category/: apps.py  models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py
config/: settings.py  urls.py  wsgi.py
order/: models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_order_options_alter_orderitem_product_and_more.py
product/: apps.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py
