[project]
name = "django-rest-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Luan Vieira",email = "luanvwittchind@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.2.5)",
    "djangorestframework (==3.16.1)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "asgiref (>=3.9.2,<4.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "tzdata (>=2025.2,<2026.0)",
    "python-decouple (>=3.8,<4.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "anyio (>=4.11.0,<5.0.0)",
    "certifi (>=2025.8.3,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
